fix: align resident card text

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -544,9 +544,13 @@ a {
 }
 .th-resident-card__body {
   position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: flex-end;
   min-height: 10rem;
   padding: 1.15rem 1rem 1.25rem;
-  text-align: left;
+  text-align: right;
 }
 .th-resident-card__portrait {
   position: absolute;
